agregado de archivos de estilos html

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>El título del post</title>
 </head>
 <body>
-    <h1>Aquí vamos a hacer un blog post</h1>
-    <p>Este es el párrafo de inicio.</p>
+    <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
+       <div id="post">
+            <h1>Este es un título atractivo</h1>
+            <p>Esta es mi pequeña contribución, tratando de hacerlo solo un poco diferente para practiar mi HTML y CSS</p>
+        </div>
+    </div>
 </body>
 </html>
