Cambios en el párrafo de blogpost.html

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,9 @@
         </div>
        <div id="post">
             <h1>Este es un título atractivo</h1>
-            <p>Esta es mi pequeña contribución, tratando de hacerlo solo un poco diferente para practiar mi HTML y CSS</p>
+            <p>
+                Este es un parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas
+            </p>
         </div>
     </div>
 </body>
