--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera2">
+            Cabecera 2
+        </div>
         <div id="cabecera">
             Cabecera
         </div>
