--- a/blogpost.html
+++ b/blogpost.html
@@ -1,26 +1,20 @@
-<!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos.css">
-    <title>El título del post</title>
+<title>El titulo del post</title>
+<link rel="stylesheet" href="./css/estilos.css" />
 </head>
 <body>
-    <div id="container">
-        <div id="cabecera2">
-            Cabecera 2
-        </div>
-        <div id="cabecera">
-            Cabecera
-        </div>
-       <div id="post">
-            <h1>Este es un título atractivo</h1>
-            <p>
-                Este es un parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas
-            </p>
-        </div>
-    </div>
+<div id="container">
+<div id="cabecera">
+Hyperblog
+<span id="tagline">Tu blog de cabecera</span>
+</div>
+<div id="post">
+<h1>Este es el título atractivo e interesante del post</h1>
+<p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+<p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+<p>Suscribete y dale like</p>
+</div>
+</div>
 </body>
 </html>
