--- a/blogpost.html
+++ b/blogpost.html
@@ -4,24 +4,9 @@
 <link rel="stylesheet" href="./css/estilos.css" />
 </head>
 <body>
-
-    <div id="container">
-        <div id="cabecera2">
-            Cabecera 2
-        </div>
-        <div id="cabecera">
-            Cabecera
-        </div>
-       <div id="post">
-            <h1>Este es un título atractivo</h1>
-            <p>
-                Este es un parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas
-            </p>
-            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-        </div>
-    </div>
-
-
+<div id="container">
+<div id="cabecera">
+Hyperblog
 <span id="tagline">Tu blog de cabecera</span>
 </div>
 <div id="post">
